apps/tempo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tempo
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: tempo
    homelab.local/OwnedBy: ElPoshoX
